# gnos

./: .gitignore  README.md  pyproject.toml
docs/: MIGRATION_TASKS.md
models/: __init__.py  gnos.py  gnos2d.py
physics/: __init__.py  boundary.py  energy.py
physics/derivatives/: __init__.py  spatial_gradient_1d.py  spatial_gradient_2d.py
problems/heat-transfer/1d/: conduction.py  config.yaml
problems/heat-transfer/2d/: config.yaml  panel.py
problems/linear-elasticity/1d/: config.yaml  truss.py
problems/linear-elasticity/2d/: config.yaml  panel.py
problems/multi-physics/1d/: config.yaml  truss.py
problems/multi-physics/2d/: config.yaml  panel.py
problems/nonlinear-elasticity/1d/: config.yaml  truss.py
problems/nonlinear-elasticity/2d/: config.yaml  panel.py
scripts/: run_1d_heat_transfer.sh  run_1d_linear_elasticity.sh  run_1d_multiphysics.sh  run_1d_nonlinear_elasticity.sh  run_2d_heat_transfer.sh  run_2d_linear_elasticity.sh  run_2d_multiphysics.sh  run_2d_nonlinear_elasticity.sh
src/solver/: __init__.py  config.py  metrics.py  train.py
src/utils/: io.py  viz.py
src/validation/fem/: heat_transfer_1d.py  heat_transfer_2d.py  linear_elasticity_1d.py  linear_elasticity_2d.py  multiphysics_1d.py  multiphysics_2d.py  nonlinear_elasticity_1d.py  nonlinear_elasticity_2d.py
